<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.25"
        android:background="@color/primarna_boja" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:contentDescription="@string/logo_app"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/dobrodosli"
        android:textColor="@color/primarna_boja"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prijava_tekst"
                android:alpha="0.8"
                android:textColor="@color/primarna_boja"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_uputa"
                android:alpha="0.8"
                android:textColor="@color/primarna_boja"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/email_unos"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:drawableEnd="@drawable/mailikona" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zaporka_uputa"
                android:textColor="@color/primarna_boja"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/zaporka_unos"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:drawableEnd="@drawable/lozinkaikona" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ostani_prijavljen"
                    android:id="@+id/ostaniprijavljen"
                    android:textSize="17sp"
                    android:textColor="@color/primarna_boja"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zaboravljena_zaporka"
                    android:layout_alignParentEnd="true"
                    android:textSize="13sp"
                    android:textColor="@color/primarna_boja"
                    android:layout_toEndOf="@id/ostaniprijavljen" />
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/prijavagumb"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/prijavi_se_gumb"
                app:cornerRadius="30dp"
                android:layout_gravity="center" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ili"
                android:alpha="0.8"
                android:textColor="@color/primarna_boja"
                android:textSize="20sp"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/googleikona"
                    android:contentDescription="@string/logo_google_prijava" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/fblogo"
                    android:contentDescription="@string/logo_fb_prijava" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/register_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nemate račun? Registrirajte se"
                android:textColor="@color/primarna_boja"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
