<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.25"
        android:background="@color/primarna_boja" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/logo_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dobrodosli"
        android:textColor="@color/primarna_boja"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_marginBottom="40dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="REGISTRACIJA"
                android:alpha="0.8"
                android:textColor="@color/primarna_boja"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

            <View android:layout_height="10dp" android:layout_width="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unesite e-mail"
                android:textColor="@color/primarna_boja"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="E-mail"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/mailikona" />

            <View android:layout_height="10dp" android:layout_width="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unesite zaporku"
                android:textColor="@color/primarna_boja"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Zaporka"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/lozinkaikona" />

            <View android:layout_height="10dp" android:layout_width="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Potvrdite zaporku"
                android:textColor="@color/primarna_boja"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Potvrda zaporke"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/lozinkaikona" />

            <View android:layout_height="20dp" android:layout_width="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="REGISTRIRAJ SE"
                android:layout_gravity="center"
                app:cornerRadius="30dp" />

            <View android:layout_height="10dp" android:layout_width="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ili"
                android:alpha="0.8"
                android:textColor="@color/primarna_boja"
                android:textSize="20sp"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/googleikona"
                    android:contentDescription="@string/logo_google_prijava" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/fblogo"
                    android:contentDescription="@string/logo_fb_prijava" />
            </LinearLayout>

            <View android:layout_height="20dp" android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Već imate račun? Prijavite se"
                android:textColor="@color/primarna_boja"
                android:textSize="16sp"
                android:layout_gravity="center" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
