...
                android:textColor="@color/black"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinnerJezik"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <View
...
